--- a/styles/gamer.css
+++ b/styles/gamer.css
@@ -23,7 +23,7 @@ body {
     font-weight: 700
 }
 
-#g-colour {
+.g-colour {
     color: #F948B2;
 }
 
@@ -70,7 +70,7 @@ body {
 }
 
 
-#goat {
+.goat {
     font-size: 4.30rem;
     font-weight: 600;
     background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
@@ -278,30 +278,132 @@ img {
 /* play games */
 .play-games {
     display: flex;
-    /* justify-content: space-around; */
-    /* align-items: center; */
     justify-content: space-between;
     margin: 100px 120px 50px 100px;
 }
 
-.play-games-title {
-    font-size: 2.5rem;
-    font-weight: 600;
+
+
+
+
+
+.imgs-content {
+    display: flex;
+    align-items: center;
+    margin-right: 20px;
 }
 
 .img7 {
-    width: 500px;
+    width: 450px;
     height: 450px;
+}
 
+.img78 {
+    padding-top: 300px;
+    position: relative;
+    right: 120px;
+}
+
+.play-games-content {
+    margin: 16px 50px;
+}
+
+.play-games-title {
+    font-size: 36px;
+    font-weight: 600;
+}
+
+.play {
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    color: transparent;
+    -webkit-background-clip: text;
+    font-size: 45px;
 }
 
 .play-games-discription {
     color: #534C64;
-    font-size: 1rem;
+    font-size: 12PX;
     font-weight: 400;
     align-items: center;
 }
-.play-games-content{
-    margin: 16px 70px;
 
+.icons div {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: 2px solid black;
+    border-radius: 50px;
+    /* gap: 20px; */
+    margin-bottom: 24px;
+    margin-right: 16px;
+}
+
+.icons img {
+    width: 60px;
+    height: 60px;
+}
+
+.icons {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    margin: 100px 200px;
+    justify-content: center;
+    /* border: 2px solid black; */
+}
+
+
+/* footer  */
+footer {
+    background-color: #0B0223;
+    width: 1280px;
+    height: 436px;
+    padding: 120px 20px;
+}
+
+.footer-container img {
+    width: 86.041px;
+    height: 40px;
+}
+
+.amer {
+    color: white;
+}
+
+.footer-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.footer-title {
+    display: flex;
+    color: white;
+    text-align: center;
+    justify-content: center;
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.footer-title p {
+    padding-right: 24px;
+}
+
+.footer-discrption {
+    display: flex;
+    justify-content: center;
+    color: rgba(255, 255, 255, 0.60);
+    font-size: 12px;
+    font-weight: 500;
+}
+
+.footer-discrption p {
+    padding-right: 50px;
+}
+
+.footer-finish {
+    color: white;
+    text-align: center;
+    font-size: 12px;
+    font-weight: 500;
 }
