--- a/styles/gamer.css
+++ b/styles/gamer.css
@@ -55,6 +55,10 @@ body {
     gap: 68px;
 }
 
+.banner {
+    
+}
+
 .banner-content {
     background-image: url(../images/Group\ 14.png);
     width: 800px;
@@ -101,16 +105,19 @@ body {
 }
 
 .banner-img {
-    /* max-width: 100%; */
-    /* border: 2px solid salmon;
-    width: 700px;
-    height: 500px; */
+    max-width: 100%;
+    width: 1100px;
+    height: 500px;
+    align-items: center;
     justify-content: center;
 
 
 }
 
-img {}
+.banner-img img {
+    width: 500px;
+    height: 400px;
+}
 
 /*\\\\\\\\\\\\\\\\\\ media quary////////////// */
 @media screen and (max-width:576px) {
@@ -331,9 +338,8 @@ img {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border: 2px solid black;
+    border: 2px solid rgb(173, 78, 78);
     border-radius: 50px;
-    /* gap: 20px; */
     margin-bottom: 24px;
     margin-right: 16px;
 }
@@ -348,7 +354,6 @@ img {
     grid-template-columns: repeat(5, 1fr);
     margin: 100px 200px;
     justify-content: center;
-    /* border: 2px solid black; */
 }
 
 
